--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 star.jpeg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
